--- a/src/Views/ImageDiffView.axaml
+++ b/src/Views/ImageDiffView.axaml
@@ -28,17 +28,14 @@
             </Border>
 
             <TextBlock Classes="primary" Text="{Binding OldImageSize}" Margin="8,0,0,0"/>
-            <TextBlock Classes="primary" Text="{Binding OldFileSize}" Foreground="{DynamicResource Brush.FG2}" Margin="16,0,0,0" HorizontalAlignment="Right"/>
+            <TextBlock Classes="primary" Text="{Binding OldFileSize}" Foreground="{DynamicResource Brush.FG2}" Margin="16,0,0,0"/>
             <TextBlock Classes="primary" Text="{DynamicResource Text.Bytes}" Foreground="{DynamicResource Brush.FG2}" Margin="2,0,0,0"/>
           </StackPanel>
 
           <Border Grid.Row="1" Margin="0,12,0,0" Effect="drop-shadow(0 0 8 #A0000000)">
             <Border Background="{DynamicResource Brush.Popup}" HorizontalAlignment="Center" Padding="8">
               <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}">
-                <Grid>
-                  <v:ImageContainer/>
-                  <Image Source="{Binding Old}" Stretch="Uniform" VerticalAlignment="Center"/>
-                </Grid>
+                <v:ImageView Image="{Binding Old}"/>
               </Border>
             </Border>
           </Border>
@@ -51,17 +48,14 @@
             </Border>
 
             <TextBlock Classes="primary" Text="{Binding NewImageSize}" Margin="8,0,0,0"/>
-            <TextBlock Classes="primary" Text="{Binding NewFileSize}" Foreground="{DynamicResource Brush.FG2}" Margin="16,0,0,0" HorizontalAlignment="Right"/>
+            <TextBlock Classes="primary" Text="{Binding NewFileSize}" Foreground="{DynamicResource Brush.FG2}" Margin="16,0,0,0"/>
             <TextBlock Classes="primary" Text="{DynamicResource Text.Bytes}" Foreground="{DynamicResource Brush.FG2}" Margin="2,0,0,0"/>
           </StackPanel>
 
           <Border Grid.Row="1" Margin="0,12,0,0" Effect="drop-shadow(0 0 8 #A0000000)">
             <Border Background="{DynamicResource Brush.Popup}" HorizontalAlignment="Center" Padding="8">
               <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}">
-                <Grid>
-                  <v:ImageContainer/>
-                  <Image Source="{Binding New}" Stretch="Uniform" VerticalAlignment="Center"/>
-                </Grid>
+                <v:ImageView Image="{Binding New}"/>
               </Border>
             </Border>
           </Border>
@@ -96,9 +90,9 @@
         <Border Grid.Row="1" Margin="0,12,0,0" Effect="drop-shadow(0 0 8 #A0000000)">
           <Border HorizontalAlignment="Center" Background="{DynamicResource Brush.Window}">
             <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}" Margin="8">
-              <v:ImagesSwipeControl OldImage="{Binding Old}"
-                                    NewImage="{Binding New}"
-                                    RenderOptions.BitmapInterpolationMode="HighQuality"/>             
+              <v:ImageSwipeControl OldImage="{Binding Old}"
+                                   NewImage="{Binding New}"
+                                   RenderOptions.BitmapInterpolationMode="HighQuality"/>             
             </Border>
           </Border>
         </Border>
