--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -163,7 +163,10 @@
         <Grid Grid.Row="2" x:Name="LeftSidebarGroups" Margin="0,4,0,0" RowDefinitions="28,Auto,28,Auto,28,Auto,28,Auto,28,Auto" SizeChanged="OnLeftSidebarSizeChanged">
           <!-- Local Branches -->
           <ToggleButton Grid.Row="0" Classes="group_expander" IsChecked="{Binding IsLocalBranchGroupExpanded, Mode=TwoWay}">
-            <TextBlock Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.LocalBranches}"/>
+            <Grid ColumnDefinitions="16,*">
+              <Path Grid.Column="0" Width="11" Height="11" HorizontalAlignment="Left" Data="{StaticResource Icons.Local}" Fill="{DynamicResource Brush.FG2}"/>
+              <TextBlock Grid.Column="1" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.LocalBranches}"/>
+            </Grid>
           </ToggleButton>
           <v:BranchTree Grid.Row="1"
                         x:Name="LocalBranchTree"
@@ -176,9 +179,10 @@
 
           <!-- Remotes -->
           <ToggleButton Grid.Row="2" Classes="group_expander" IsChecked="{Binding IsRemoteGroupExpanded, Mode=TwoWay}">
-            <Grid ColumnDefinitions="*,Auto">
-              <TextBlock Grid.Column="0" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Remotes}"/>
-              <Button Grid.Column="1" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding AddRemote}" ToolTip.Tip="{DynamicResource Text.Repository.Remotes.Add}">
+            <Grid ColumnDefinitions="16,*,Auto">
+              <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Data="{StaticResource Icons.Remotes}" Fill="{DynamicResource Brush.FG2}"/>
+              <TextBlock Grid.Column="1" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Remotes}"/>
+              <Button Grid.Column="2" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding AddRemote}" ToolTip.Tip="{DynamicResource Text.Repository.Remotes.Add}">
                 <Path Width="12" Height="12" Data="{StaticResource Icons.Remote.Add}"/>
               </Button>
             </Grid>
@@ -194,15 +198,16 @@
 
           <!-- Tags -->
           <ToggleButton Grid.Row="4" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
-            <Grid ColumnDefinitions="Auto,*,Auto,Auto">
-              <TextBlock Grid.Column="0" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Tags}"/>
-              <TextBlock Grid.Column="1" Text="{Binding Tags, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
-              <ToggleButton Grid.Column="2" 
+            <Grid ColumnDefinitions="16,Auto,*,Auto,Auto">
+              <Path Grid.Column="0" Width="11" Height="11" Margin="2,1,0,0" HorizontalAlignment="Left" Data="{StaticResource Icons.Tags}" Fill="{DynamicResource Brush.FG2}"/>
+              <TextBlock Grid.Column="1" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Tags}"/>
+              <TextBlock Grid.Column="2" Text="{Binding Tags, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
+              <ToggleButton Grid.Column="3" 
                             Classes="tag_display_mode" 
                             Width="14" 
                             IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowTagsAsTree, Mode=TwoWay}"
                             ToolTip.Tip="{DynamicResource Text.Repository.ShowTagsAsTree}"/>
-              <Button Grid.Column="3" 
+              <Button Grid.Column="4" 
                       Classes="icon_button" 
                       Width="14"
                       Margin="8,0"
@@ -226,10 +231,11 @@
 
           <!-- Submodules -->
           <ToggleButton Grid.Row="6" Classes="group_expander" IsChecked="{Binding IsSubmoduleGroupExpanded, Mode=TwoWay}">
-            <Grid ColumnDefinitions="Auto,*,Auto,Auto">
-              <TextBlock Grid.Column="0" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Submodules}"/>
-              <TextBlock Grid.Column="1" Text="{Binding Submodules, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
-              <Button Grid.Column="2"
+            <Grid ColumnDefinitions="16,Auto,*,Auto,Auto">
+              <Path Grid.Column="0" Width="10" Height="10" Margin="2,0,0,0" HorizontalAlignment="Left" Data="{StaticResource Icons.Submodules}" Fill="{DynamicResource Brush.FG2}"/>
+              <TextBlock Grid.Column="1" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Submodules}"/>
+              <TextBlock Grid.Column="2" Text="{Binding Submodules, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
+              <Button Grid.Column="3"
                       Classes="icon_button"
                       Width="14"
                       Margin="8,0"
@@ -238,7 +244,7 @@
                       ToolTip.Tip="{DynamicResource Text.Repository.Submodules.Update}">
                 <Path Width="12" Height="12" Data="{StaticResource Icons.Loading}"/>
               </Button>
-              <Button Grid.Column="3"
+              <Button Grid.Column="4"
                       Classes="icon_button"
                       Width="14"
                       Margin="0,0,8,0"
@@ -281,10 +287,11 @@
 
           <!-- Worktrees -->
           <ToggleButton Grid.Row="8" Classes="group_expander" IsChecked="{Binding IsWorktreeGroupExpanded, Mode=TwoWay}">
-            <Grid ColumnDefinitions="Auto,*,Auto,Auto">
-              <TextBlock Grid.Column="0" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Worktrees}"/>
-              <TextBlock Grid.Column="1" Text="{Binding Worktrees, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
-              <Button Grid.Column="2"
+            <Grid ColumnDefinitions="16,Auto,*,Auto,Auto">
+              <Path Grid.Column="0" Width="11" Height="11" Margin="1,0,0,0" HorizontalAlignment="Left" Data="{StaticResource Icons.Worktrees}" Fill="{DynamicResource Brush.FG2}"/>
+              <TextBlock Grid.Column="1" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Worktrees}"/>
+              <TextBlock Grid.Column="2" Text="{Binding Worktrees, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
+              <Button Grid.Column="3"
                       Classes="icon_button"
                       Width="14"
                       Margin="8,0"
@@ -293,13 +300,13 @@
                       ToolTip.Tip="{DynamicResource Text.Repository.Worktrees.Prune}">
                 <Path Width="12" Height="12" Data="{StaticResource Icons.Loading}"/>
               </Button>
-              <Button Grid.Column="3"
+              <Button Grid.Column="4"
                       Classes="icon_button"
                       Width="14"
-                      Margin="0,0,8,0"
+                      Margin="0,0,9,0"
                       Command="{Binding AddWorktree}"
                       ToolTip.Tip="{DynamicResource Text.Repository.Worktrees.Add}">
-                <Path Width="12" Height="12" Data="{StaticResource Icons.Worktree.Add}"/>
+                <Path Width="11" Height="11" Data="{StaticResource Icons.Worktree.Add}"/>
               </Button>
             </Grid>
           </ToggleButton>
